# CNC-GRBL-control-project

./: .gitignore  CMakeLists.txt  build-dependencies.txt  install-dependencies.sh
src/: main.cpp  main_dev.cpp
src/services/: CncConfig.h  CncService.cpp  CncService.h  test_joystick.py
